--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,6 +10,8 @@ services:
       POSTGRES_PASSWORD: mysecretpassword
       POSTGRES_PORT: 5432
       POSTGRES_DB: postgres
+    networks:
+      - fastapi_network
   api:
     build:
       dockerfile: Dockerfile
