--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
----
 version: "3.4"
 services:
   db:
@@ -12,6 +11,7 @@ services:
       POSTGRES_DB: postgres
     networks:
       - fastapi_network
+
   api:
     build:
       dockerfile: Dockerfile
@@ -26,7 +26,9 @@ services:
       - ./docs:/app/docs
       - ./.sentence_transformers:/app/.sentence_transformers
     networks:
-      - fastapi_network
+      fastapi_network:
+        aliases:
+          - rag_api-api-1
     environment:
       DEFAULT_EMBEDDING_MODEL: BAAI/bge-small-en-v1.5
       POSTGRES_HOST: db
